--- a/index.html
+++ b/index.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
+<html lang="en">
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Snec</title>
-  <!-- <link rel="stylesheet" href="styles.css"> -->
-  <script src="script.js" defer></script>
-</head>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Snec</title>
+    <link rel="stylesheet" href="style.css" />
 
-<body style="background-color: blue">
-  <h1>Welcome to Snec</h1>
-  <canvas id="canvas" height="600" width="600">
-  </canvas>
+  </head>
 
-</body>
+  <body>
+    <h1>Welcome to Snec</h1>
+
+    <canvas id="canvas" height="600" width="600">
+    </canvas>
+
+    <script src="script.js" defer></script>
+
+  </body>
 
 </html>
